--- a/000-default.conf
+++ b/000-default.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
-    ServerAdmin webmaster@localhost
-    DocumentRoot /var/www/html/dist
+     ServerAdmin webmaster@localhost
+    DocumentRoot /var/www/html/php
 
     <Directory /var/www/html>
         Options Indexes FollowSymLinks
@@ -8,7 +8,7 @@
         Require all granted
     </Directory>
 
-    <Directory /var/www/html/dist>
+    <Directory /var/www/html/php>
         Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
