cambios configuracion bbdd

--- a/Conexion/.envLocal
+++ b/Conexion/.envLocal
@@ -1,4 +1,4 @@
-HOST=mysql
-USER=root
-PASSWORD=root
-BD=MENU
+HOST=dpg-crlg57btq21c73eestr0-a
+USER=usuario
+PASSWORD=1cGGKqIaOktlLyodhg6l0wAbjU9JL8Gx
+BD=menu_ti69
