--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -3,8 +3,7 @@ FROM ubuntu:20.04
 RUN apt-get update && apt-get install -y software-properties-common
 RUN add-apt-repository ppa:ondrej/php
 RUN apt-get update
-RUN apt-get update && apt-get install -y libpq-dev \
-    && docker-php-ext-install pdo pdo_pgsql
+
 
 RUN apt-get install -y apache2
 RUN a2enmod rewrite  
@@ -18,7 +17,11 @@ RUN apt-get install -y php8.3-mysql \
     php8.3-mbstring \
     php8.3-xml \
     php8.3-pcov \
-    php8.3-xdebug
+    php8.3-xdebug \
+    libpq-dev \
+    pdo \
+    docker-php-ext-install \
+    pdo_pgsql
 
 COPY . /var/www/html/php
 COPY /Conexion/.envLocal /var/www/html/php/Conexion/.env
