--- a/Conexion/.env
+++ b/Conexion/.env
@@ -1,3 +1,4 @@
-DSN=postgresql://usuario:loKc3yR9Lr316IOnGj4WmjJu6L4wGiqf@dpg-crmm1v5umphs739gtru0-a.frankfurt-postgres.render.com/menu_iiep
-USER=usuario
-PASSWORD=loKc3yR9Lr316IOnGj4WmjJu6L4wGiqf
+HOST=mysql
+USER=root
+PASSWORD=root
+BD=MENU
