--- a/Conexion/.envLocal
+++ b/Conexion/.envLocal
@@ -1,4 +1,4 @@
-HOST=postgresql://usuario:1cGGKqIaOktlLyodhg6l0wAbjU9JL8Gx@dpg-crlg57btq21c73eestr0-a.frankfurt-postgres.render.com/menu_ti69
-USER=usuario
-PASSWORD=1cGGKqIaOktlLyodhg6l0wAbjU9JL8Gx
-BD=menu_ti69
+HOST=188.85.214.179
+USER=ainveg_menu
+PASSWORD=651500170A.v.s
+BD=ainveg_menu
