--- a/Conexion/.env
+++ b/Conexion/.env
@@ -1,4 +1,4 @@
-HOST=digitalchef-bbdd.onrender.com
-USER=root
-PASSWORD=root
-BD=MENU
+HOST=sql7.freesqldatabase.com
+USER=sql7732949
+PASSWORD=fixbaY2QDt
+BD=sql7732949
