--- a/Conexion/.envLocal
+++ b/Conexion/.envLocal
@@ -1,4 +1,4 @@
-HOST=sql7.freesqldatabase.com
-USER=sql7732949
-PASSWORD=fixbaY2QDt
-BD=sql7732949
+HOST=digitalchef-ddbb.cz8e8w6m8qot.us-east-1.rds.amazonaws.com
+USER=root
+PASSWORD=651500170
+BD=mysql
