--- a/Conexion/.envLocal
+++ b/Conexion/.envLocal
@@ -1,4 +1,4 @@
-HOST=digitalchef-ddbb.cz8e8w6m8qot.us-east-1.rds.amazonaws.com
-USER=root
+HOST=vps-d4d75117.vps.ovh.net
+USER=ubuntu
 PASSWORD=651500170A.v.s
 BD=MENU
